# max-system-public

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  fly.toml  pyproject.toml
Recursos/sena/: recursosena.md
common/: security.py
dispatch/: __init__.py  main.py  requirements.txt  telegram.py
openclaw/: __init__.py  requirements.txt  server.py
pi_service/: __init__.py  app.py  requirements.txt
scheduler/: Dockerfile  scheduler.py
src/: formatVideoFilename.js
tests/: test_dispatch.py  test_openclaw.py  test_pi_service.py
whatsapp/: Dockerfile  index.js  package.json
