[tool.poetry]
name = "content-automation"
version = "0.1.0"
description = "Automatización de contenido con Dispatch, Pi y OpenClaw"
authors = ["Juan David <juan@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
httpx = "^0.27.0"
pydantic = "^2.8"
pyjwt = "^2.9"
python-dotenv = "^1.0"
# Supabase client (free)
# supabase dependency removed (not needed for tests)

[tool.poetry.dev-dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
